--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/ws": "^8.5.13",
+    "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.0"
   },
   "keywords": [],
